k8s/fleet/slackwatch/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slackwatch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slackwatch
  template:
    metadata:
      labels:
        app: slackwatch
    spec:
      serviceAccountName: slackwatch-backend
      containers:
      - name: slackwatch
        image: ghcr.io/slackspace-io/slackwatch:latest
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: config-volume
            mountPath: /app/config
      volumes:
      - name: config-volume
        configMap:
          name: slackwatch-config
