k8s/fleet/slackwatch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slackwatch-svc
spec:
  selector:
    app: slackwatch
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
